Fix card title overflowing when title is lengthy

--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -806,9 +806,6 @@ a.feedback:hover {
   overflow: auto;
 }
 
-.scenarios-collection .ant-card-head {
-  height: 75px;
-}
 
 .scenarios-collection .cards-container {
   display:flex;
@@ -824,6 +821,13 @@ a.feedback:hover {
 .scenarios-collection.equal-display .scenario-card-content {
   height: 300px;
   overflow-y: auto;
+}
+
+.scenarios-collection .ant-card-body {
+  height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  overflow: auto !important;
 }
 
 .scenarios-collection .card-actions-footer {
@@ -882,7 +886,7 @@ a.feedback:hover {
 }
 
 .scenario .scenario-card-content {
-  height: 260px;
+  height: 100%;
   overflow-y: auto;
   font-size: small;
 }
@@ -901,6 +905,12 @@ a.feedback:hover {
 .ant-card-head {
   border-bottom: 1px solid var(--color-light-gray) !important;
   justify-content: top  !important;
+}
+
+.scenarios-collection  .ant-card-head {
+  height: auto !important;
+  min-height: fit-content !important;
+  padding: 12px 24px !important;
 }
 
 .ant-card-head-title {
